# RevoLution

./: .gitignore  README.md  RevoLution.sln
RevoLution/: .gitignore  Class1.cs  LICENSE  README.md  pyproject.toml
RevoLution/Environments/: SimpleEnvironments.cs
RevoLution/Evolution/: GeneticAlgorithm.cs  Species.cs
RevoLution/Hybrid/: HybridLearner.cs
RevoLution/Neural/: Connection.cs  NeuralNetwork.cs  Node.cs
RevoLution/Novelty/: NoveltySearch.cs
RevoLution/RL/: ReinforcementLearner.cs
RevoLution/configs/: example_bandit_benchmark_suite.yaml  example_bandit_revolution.yaml  example_webots_inverted_pendulum_benchmark_suite.yaml  neat_bandit.cfg
RevoLution/docs/: revolution.instructions.yml
RevoLution/scripts/: make_report.py  run_benchmark_suite.py  run_experiment.py  run_random_rollout.py
RevoLution/src/revolution/: __init__.py  config.py  seeding.py  utils.py
RevoLution/src/revolution/benchmarks/: __init__.py  protocols.py  registry.py  runner.py
RevoLution/src/revolution/envs/: __init__.py  bandit.py  descriptors.py  gridworld.py
RevoLution/src/revolution/evolution/: __init__.py  engine.py
RevoLution/src/revolution/neat_adapter/: __init__.py  genome_bridge.py  phenotype_torch.py  (+1 more)
RevoLution/tests/: conftest.py  test_archive_knn.py  test_benchmark_protocol_budget.py  test_descriptor_determinism.py  test_engine_smoke_deterministic.py  test_lifetime_learning_reset.py  test_neat_bridge_forward.py  test_recurrent_runtime_reset.py  test_reporting_reproducible_bundle.py  test_seeding_determinism.py
RevoLution/tests/fixtures/: neat_test.cfg
(+26 files in other folders)
