[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revolution"
version = "0.0.1"
description = "RevoLution research framework (NEAT + novelty + lifetime RL)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "RevoLution Contributors" }
]
dependencies = [
  "neat-python>=0.92",
  "torch>=2.2",
  "gymnasium>=0.29",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
benchmarking = [
  "stable-baselines3>=2.3",
  "scipy>=1.12",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "jinja2>=3.1",
]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.5",
  "ruff>=0.3",
  "black>=24.2",
  "mypy>=1.8",
  "types-PyYAML>=6.0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["revolution"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["neat", "neat.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
